# Squadrone

./: .env.example  .gitignore  DESIGN.md  README.md  pyproject.toml
benchmarks/: corpus.json  runner.py
db/: schema.sql
docker/: docker-compose.yml.j2  wp-init.sh
manual/: wp_manual_sandbox.py
pipelines/: default.yaml  openai-research.yaml  openai.yaml  test.yaml
scripts/: probe_chatgpt_55.py
src/squadrone/: __init__.py  cli.py  orchestrator.py
src/squadrone/agents/: __init__.py  _specialist_base.py  chain_synthesizer.py  critic.py  developer.py  entry_point_validator.py  hypothesis_verifier.py  plugin_tools.py  poc_author.py  prompts_io.py  reporter.py  runtime.py  surveyor.py  tools.py
src/squadrone/poc_templates/: __init__.py  auth_bypass.py.j2  file_upload.py.j2  ssrf.py.j2  wp_login.py
src/squadrone/prompts/: __init__.py  _wp_idioms.md  chain_synthesis.md  claim_validator.md  critic.md  developer.md  developer_setup.md  hypothesis_verifier.md  patchstack_scope.md  (+6 more)
src/wpvulnhunt/: __init__.py  orchestrator.py
tests/: conftest.py
tests/unit/: test_artifacts.py  test_budget.py  test_chain_stage.py  test_chatgpt_model_patch.py  test_cli_batch.py  test_cli_stage_summary.py  test_decision_ledger.py  test_history_trim.py  test_json_resilient.py  test_llm_retry.py  test_manual_queue.py  test_plugin_tools.py  test_quality_gate.py  test_recon_static.py  test_schemas.py  test_sqlite_helper.py  test_svn_client.py  test_transport_schema_payload.py  test_triage_manual_review.py  test_v2_methodology.py  test_verify_setup_safety.py  test_wp_login.py
(+104 files in other folders)
