[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "squadrone"
version = "0.1.0"
requires-python = ">=3.12"
description = "Squadrone multi-agent WordPress plugin vulnerability research tool"
dependencies = [
    "litellm>=1.40.0",
    "httpx>=0.27.0",
    "requests>=2.32.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.7.0",
    "typer>=0.12.0",
    "aiodocker>=0.22.0",
    "pyyaml>=6.0.1",
    "jinja2>=3.1.0",
    "rich>=13.7.0",
    "tenacity>=8.3.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "pytest-httpx", "ruff", "mypy"]

[project.scripts]
squadrone = "squadrone.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
squadrone = ["prompts/*.md", "prompts/specialists/*.md", "poc_templates/*.j2", "poc_templates/*.py"]
